fix: h2 font-size and letter spacing

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,11 @@ text-align: left;
 line-height: 1.4;
 word-spacing: 2px;
 }
+h2 {
+  font-weight: 100;
+  font-size: 1rem;
+  letter-spacing: 4px;
+}
 p {
   text-align: left;
   width: 90%;
@@ -75,9 +80,16 @@ figcaption {
 .shareSection {
   background-color: hsl(210, 46%, 95%);
   border-radius: 50%;
-  width: 25px;
+  width: 40px;
   margin: auto;
-  height: 25px;
+  height: 40px;
+}
+img.proceed {
+  /* width: 20px; */
+  /* height: 20px; */
+  /* display: block; */
+  /* margin: auto; */
+  padding: 10px;
 }
 .socialShare {
   width: 100%;
@@ -158,7 +170,7 @@ margin-left: 0px;
 }
 .socialShare {
   top: -87px;
-  width: 70%;
+  width: 275px;
   left: 285px;
   border-radius: 20px;
   padding: 14px 30px;
